# tg-nhl-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.py  config.yaml  pyproject.toml  run_nhl_digest.bat  test_telegram.yml
.github/workflows/: ci.yml  test_telegram.yml
archive/: main.py  requirements.in  requirements.txt
data/: favorite_players_candidates.csv  players_all_teams_2w.csv
notebooks/: notes.ipynb
scratch/: debug_case2.py  debug_demo.py  hello.py  http_json_handling.py  http_retry.py  http_test.py  main.py  scratcher.py  smoke_test.py
src/tg_nhl_agent/: contracts.py  core_scoring.py  dump_players_csv.py  favorites_loader.py  formatting.py  logging_config.py  main.py  nhl_api_results_loader.py  redact.py  smoke_core.py  telegram_publish.py  usecase.py
src/tg_nhl_agent/adapters/: publication_registry_file.py
src/tg_nhl_agent/data/: favorite_players.csv
src/tg_nhl_agent/docs/: config_v1.md  idempotency_v1.md  release_scope_v1.md
